--- a/nooklist/package.json
+++ b/nooklist/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^19.2.12",
     "@angular/compiler": "^19.2.12",
     "@angular/core": "^19.2.12",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.12",
     "@angular/platform-browser": "^19.2.12",
     "@angular/platform-browser-dynamic": "^19.2.12",
@@ -22,6 +23,7 @@
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "latest",
     "@capacitor/ios": "^7.2.0",
+    "@ionic/angular": "^8.5.7",
     "@tailwindcss/postcss": "^4.1.6",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
@@ -30,8 +32,8 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.13",
-    "@angular/cli": "^19.2.13",
+    "@angular-devkit/build-angular": "^19.2.12",
+    "@angular/cli": "^19.2.12",
     "@angular/compiler-cli": "^19.2.12",
     "@capacitor/cli": "latest",
     "@types/jasmine": "~5.1.0",
