--- a/nooklist/ios/App/App/Info.plist
+++ b/nooklist/ios/App/App/Info.plist
@@ -45,5 +45,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+	<key>UIApplicationSupportsMultipleScenes</key>
+	<false/>
+	</dict>
 </dict>
 </plist>
