--- a/nooklist/package.json
+++ b/nooklist/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^8.5.7",
     "@tailwindcss/postcss": "^4.1.6",
     "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.0",
     "tslib": "^2.3.0",
