--- a/nooklist/package.json
+++ b/nooklist/package.json
@@ -24,6 +24,9 @@
     "@capacitor/core": "latest",
     "@capacitor/ios": "^7.2.0",
     "@ionic/angular": "^8.5.7",
+    "@ngrx/effects": "^19.2.0",
+    "@ngrx/store": "^19.2.0",
+    "@ngrx/store-devtools": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.6",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
